Added text and image to index

--- a/index.html
+++ b/index.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
 <!-- saved from url=(0079)https://cardadfar.github.io/stuco_webdev_website/assets/files/html_starter.html -->
+<!-- some code adapted from https://dominic-calkosz.com/about -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Give Me a Title!</title>                           <!-- Give Title -->
+    <title>About</title>                           <!-- Give Title -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./Give Me a Title!_files/style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="https://cardadfar.github.io/stuco_webdev_website/assets/files/cool-icon.png">                    <!-- Insert Icon -->
     <script src="./Give Me a Title!_files/jquery.min.js.download"></script>
 </head>
 <body>
+	<style type="text/css">
+		.profile_image {
+			height: 400px;
+			border-radius: 15%;
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
 
-    <p> Lets Build a Great Site! :D </p>
+		.box {
+			width: 50%;
+			margin-left: 25%;
+		}
+
+		.box_img {
+			text-align: center;
+		}
+
+		.input_style {
+			width: 100%;
+		}
+
+		.header {
+			text-align: center;
+		}
+
+
+	</style>
+
+	<div class=box>
+		<div class=box_img>
+    		<img class=profile_image src="images/profile.jpg">
+    	</div>
+    	<h1 class=header>Hi.</h1>
+		
+		<p> I'm Bridget. I'm a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering. I recently graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="http://coursecatalog.web.cmu.edu/collegeofengineering/undergraduatedesignatedminors/#audioengineeringtext" target="_blank">audio engineering</a>. </p>
+    	
+    </div>
 
     <script type="text/javascript" src="./Give Me a Title!_files/interactions.js.download"></script>    <!-- Insert JQuery Script -->
 
