--- a/skills.html
+++ b/skills.html
@@ -20,6 +20,7 @@
 
 		body {
 			margin: 0;
+    		padding:0px;
 			font-family: Arial;
 		}
 
@@ -38,6 +39,7 @@
 			margin-left: 25%;
 			color: white;
 			font-family: Arial;
+			display: block;
 		}
 
 		.content_img {
@@ -185,6 +187,15 @@
 			/*margin: 0;*/
 		}
 
+		.list-content {
+			margin-bottom: 50px;
+			margin-left: 0;
+		}
+
+		.list-subcontent {
+			margin-left: 20px;
+		}
+
 
 
 
@@ -198,7 +209,7 @@
 	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		Projects 
 	    	</a>
-	    	<a href="skills.html" class="element underline-ltr"> 
+	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		Skills 
 	    	</a>
 	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
@@ -211,28 +222,52 @@
     </div>
 
 	<div class=content>
-		<div class=content_img>
-    		<img class=profile_image src="images/profile.jpg">
-    	</div>
-    	<h1 class=header>Hi.</h1>
-		
-		<p> I'm Bridget. I'm a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering. I recently graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="http://coursecatalog.web.cmu.edu/collegeofengineering/undergraduatedesignatedminors/#audioengineeringtext" target="_blank">audio engineering</a>. My coursework is primarily focused in signal and image processing. I'm currently building this website for a class, so more content will be added in the coming weeks.</p>
-
-    </div>
-
-		<a class="resume" href="documents/Bridget Tan Resume.pdf">My Resume</a>
-
-	<div class=item>
-    	<h3 class=header>MS in Electrical and Computer Engineering</h3>		
-		<p class=description> Carnegie Mellon University - Expected in December 2020</p>
-    	
-    	<h3 class=header>BS in Electrical and Computer Engineering</h3>		
-		<p class=description> Carnegie Mellon University - May 2019</p>
-
-    	<h3 class=header>Minor in Audio Engineering</h3>		
-		<p class=description> Carnegie Mellon University - May 2019</p>
-    	
-    </div>
+		<div class="list-content">
+	    	<h1>Programming</h1>
+	    	<div class="list-subcontent">
+				<p> MATLAB </p>
+				<p> Python </p>
+				<p> C </p>
+				<p> Latex </p>
+				<p> C# </p>
+				<p> C++ </p>
+				<p> HTML & CSS </p>
+			</div>
+		</div>
+		<div class="list-content">
+	    	<h1>Microcontrollers</h1>
+	    	<div class="list-subcontent">
+				<p> Arduino </p>
+				<p> Raspberry Pi </p>
+			</div>
+		</div>
+		<div class="list-content">
+	    	<h1>Software</h1>
+	    	<div class="list-subcontent">
+				<p> Audacity </p>
+				<p> Unity 3D </p>
+				<p> SOLIDWORKS </p>
+				<p> Pro Tools </p>
+				<p> Phtoshop </p>
+				<p> Illustrator </p>
+			</div>
+		</div>
+		<div class="list-content">
+	    	<h1>Fabrication</h1>
+	    	<div class="list-subcontent">
+				<p> Laser Cutting </p>
+				<p> 3D Printing </p>
+			</div>
+		</div>
+		<div class="list-content">
+	    	<h1>Spoken Languages</h1>
+	    	<div class="list-subcontent">
+				<p> English (native)</p>
+				<p> Chinese (professional working proficiency)</p>
+				<p> Spanish (limited working proficiency)</p>
+			</div>
+		</div>
+	</div>    
 
     <div class="nav-bottom">
     	<a href="https://www.linkedin.com/in/bridget-tan/" class="icon"> 
