--- a/index.html
+++ b/index.html
@@ -9,186 +9,16 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About</title>                           <!-- Give Title -->
+    <title>Bridget Tan</title>                           <!-- Give Title -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./Give Me a Title!_files/style.css">  <!-- Insert StyleSheet -->
+    <link rel="stylesheet" type="text/css" href="index-style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="https://cardadfar.github.io/stuco_webdev_website/assets/files/cool-icon.png">                    <!-- Insert Icon -->
     <script src="./Give Me a Title!_files/jquery.min.js.download"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
+
 </head>
 <body bgcolor="#1c1c1c">
-	<style type="text/css">
-
-		body {
-			margin: 0;
-			font-family: Arial;
-		}
-
-		.profile_image {
-			height: 400px;
-			border-radius: 15%;
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			position: static;
-			margin-top: 50px;
-		}
-
-		.content {
-			width: 50%;
-			margin-left: 25%;
-			color: white;
-			font-family: Arial;
-		}
-
-		.content_img {
-			text-align: center;
-		}
-
-		.header {
-			text-align: center;
-		}
-
-		.nav-bar {
-			width: 100%;
-			height: 50px;
-			margin: 0;
-			background: black;
-
-			position: sticky;
-			position: -webkit-sticky; 
-			top: 0; 
-			opacity: 0.75;
-		}
-
-		.nav-bar > .title {
-			line-height: 50px;
-			text-align: center;
-			color: white;
-			display: inline-block;
-			background: black;
-			margin: 0px 20px;
-			font-weight: bold;
-			font-family: Verdana;
-			letter-spacing: 1px;
-			text-decoration: none;
-			opacity: 1;
-  			position: relative;
-		}
-
-		.nav-bar .element {
-			/*width: 19.5%;*/
-			line-height: 50px;
-			text-align: center;
-			color: white;
-			display: inline-block;
-			background: black;
-			margin: 0px 20px;
-			font-weight: bold;
-			text-decoration: none;
-			opacity: 1;
-  			position: relative;
-		}
-
-		.nav-bar .element:hover {
-			opacity: 1;
-		}
-
-		.nav-bar .element::before {
-			transition: 300ms;
-			height: 5px;
-			content: "";
-			position: absolute;
-			background-color: white;
-
-		}
-
-		.nav-left {
-			float: left;
-		}
-
-		.nav-right {
-			float: right;
-		}
-
-		.underline-ltr::before {
-			width: 0%;
-			bottom: 5px;
-
-		}
-
-		.underline-ltr:hover::before {
-			width: 100%;
-
-		}
-
-		.nav-bottom {
-			width: 125px;
-		    margin-left: auto;
-		    margin-right: auto;
-			margin-bottom: 10px; 
-		}
-
-		.item {
-			text-align: center;
-			margin-top: 150px;
-			margin-bottom: 150px;
-			color: white;
-			font-family: Arial;
-		}
-
-		.item > .header {
-			text-decoration: bold;
-			margin-top: 20px;
-			margin-bottom: 0;
-			color: white;
-		}
-
-		.item > .description {
-			margin: 0;
-			color: white;
-		}
-
-		a {
-			text-decoration: none;
-			color: white;
-			font-family: Arial;
-		}
-
-		a.resume {
-			width: 10%;
-			text-align: center;
-			display: inline-block;
-			color: white;
-			background: black;
-			padding-top: 10px;
-			padding-bottom: 10px;
-			margin-top: 10px;
-			margin-bottom: 10px;
-			margin-left: 45%;
-		}
-
-		a.icon {
-			margin-right: 20px;
-			/*margin-right: auto;*/
-			text-align: center;
-			display: inline-block;
-			/*margin: 0;*/
-		}
-
-		a.resume:hover {
-			font-weight: 600;
-		}
-
-		.icon {
-			width: 40px;
-			height: 40px;
-			/*margin: 0;*/
-		}
-
-
-
-
-	</style>
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
@@ -214,14 +44,14 @@
 		<div class=content_img>
     		<img class=profile_image src="images/profile.jpg">
     	</div>
-    	<h1 class=header>Hi.</h1>
+    	<h1 class=header>Hello!</h1>
 		
 		<p> I'm Bridget. I'm a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering. I recently graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="http://coursecatalog.web.cmu.edu/collegeofengineering/undergraduatedesignatedminors/#audioengineeringtext" target="_blank">audio engineering</a>. My coursework is primarily focused in signal and image processing. I'm currently building this website for a class, so more content will be added in the coming weeks.</p>
 
     </div>
-
-		<a class="resume" href="documents/Bridget Tan Resume.pdf">My Resume</a>
-
+    <div id='resume' class="resume">
+		Resume 
+	</div>
 	<div class=item>
     	<h3 class=header>MS in Electrical and Computer Engineering</h3>		
 		<p class=description> Carnegie Mellon University - Expected in December 2020</p>
@@ -235,15 +65,15 @@
     </div>
 
     <div class="nav-bottom">
-    	<a href="https://www.linkedin.com/in/bridget-tan/" class="icon"> 
-    		<img class="icon" src="images/linkedin-icon.png">
+    	<a class="icon"> 
+    		<img id="linkedin" class="icon" src="images/linkedin-icon.png">
     	</a>
-    	<a href="https://github.com/bridget-tan" class="icon"> 
-    		<img class="icon" src="images/github-icon.png">
+    	<a class="icon"> 
+    		<img id="github" class="icon" src="images/github-icon.png">
     	</a>
     </div>
 
-    <script type="text/javascript" src="./Give Me a Title!_files/interactions.js.download"></script>    <!-- Insert JQuery Script -->
+    <script type="text/javascript" src="interactions.js"></script>
 
 
 
