Added animations and a contact page

--- a/contact.html
+++ b/contact.html
@@ -38,53 +38,15 @@
     	</div>
     </div>
 
-	<div class=content>
-		<div class="list-content">
-	    	<h1>Programming</h1>
-	    	<div class="list-subcontent">
-				<p> MATLAB </p>
-				<p> Python </p>
-				<p> C </p>
-				<p> Latex </p>
-				<p> C# </p>
-				<p> C++ </p>
-				<p> HTML & CSS </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Microcontrollers</h1>
-	    	<div class="list-subcontent">
-				<p> Arduino </p>
-				<p> Raspberry Pi </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Software</h1>
-	    	<div class="list-subcontent">
-				<p> Audacity </p>
-				<p> Unity 3D </p>
-				<p> SOLIDWORKS </p>
-				<p> Pro Tools </p>
-				<p> Phtoshop </p>
-				<p> Illustrator </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Fabrication</h1>
-	    	<div class="list-subcontent">
-				<p> Laser Cutting </p>
-				<p> 3D Printing </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Spoken Languages</h1>
-	    	<div class="list-subcontent">
-				<p> English (native)</p>
-				<p> Chinese (professional working proficiency)</p>
-				<p> Spanish (limited working proficiency)</p>
-			</div>
+
+	<div class="content margin-top-100">
+		<h1 class=header>Contact.</h1> 
+		<div class=margin-top-75>
+			<p class=header> You can contact me at any time. I look forward to connecting with you.</p>
+			<h4 class=box>bridgett [at] andrew [dot] cmu [dot] edu</h4>
 		</div>
 	</div>    
+
 
     <div class="nav-bottom">
     	<div class="element">
