--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		Experience 
 	    	</a>
-	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
+	    	<a href="contact.html" class="element underline-ltr"> 
 	    		Contact 
 	    	</a>
     	</div>
@@ -49,9 +49,11 @@
 		<p> I'm Bridget. I'm a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering. I recently graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="http://coursecatalog.web.cmu.edu/collegeofengineering/undergraduatedesignatedminors/#audioengineeringtext" target="_blank">audio engineering</a>. My coursework is primarily focused in signal and image processing. I'm currently building this website for a class, so more content will be added in the coming weeks.</p>
 
     </div>
+    
     <div id='resume' class="resume">
 		Resume 
 	</div>
+
 	<div class=item>
     	<h3 class=header>MS in Electrical and Computer Engineering</h3>		
 		<p class=description> Carnegie Mellon University - Expected in December 2020</p>
@@ -65,12 +67,12 @@
     </div>
 
     <div class="nav-bottom">
-    	<a class="icon"> 
-    		<img id="linkedin" class="icon" src="images/linkedin-icon.png">
-    	</a>
-    	<a class="icon"> 
-    		<img id="github" class="icon" src="images/github-icon.png">
-    	</a>
+    	<div class="element">
+			<img id="linkedin" class="icon" src="images/linkedin-icon.png">
+		</div>
+		<div class="element">
+			<img id="github" class="icon" src="images/github-icon.png">
+		</div>
     </div>
 
     <script type="text/javascript" src="interactions.js"></script>
