Added experience and project pages

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bridget Tan - Skills</title>                           <!-- Give Title -->
+    <title>Bridget Tan - Contact</title>                           <!-- Give Title -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="index-style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="https://cardadfar.github.io/stuco_webdev_website/assets/files/cool-icon.png">                    <!-- Insert Icon -->
@@ -23,13 +23,13 @@
 	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
-	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
+	    	<a href="projects.html" class="element underline-ltr"> 
 	    		Projects 
 	    	</a>
 	    	<a href="skills.html" class="element underline-ltr"> 
 	    		Skills 
 	    	</a>
-	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
+	    	<a href="experience.html" class="element underline-ltr"> 
 	    		Experience 
 	    	</a>
 	    	<a href="contact.html" class="element underline-ltr"> 
@@ -39,10 +39,11 @@
     </div>
 
 
+
 	<div class="content margin-top-100">
-		<h1 class=header>Contact.</h1> 
+		<h1 class=header-center>Contact.</h1> 
 		<div class=margin-top-75>
-			<p class=header> You can contact me at any time. I look forward to connecting with you.</p>
+			<p class=header-center> You can contact me at any time. I look forward to connecting with you.</p>
 			<h4 class=box>bridgett [at] andrew [dot] cmu [dot] edu</h4>
 		</div>
 	</div>    
