--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bridget Tan - Skills</title>                           <!-- Give Title -->
+    <title>Bridget Tan - Projects</title>                           <!-- Give Title -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="index-style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="https://cardadfar.github.io/stuco_webdev_website/assets/files/cool-icon.png">                    <!-- Insert Icon -->
@@ -41,48 +41,20 @@
 
 	<div class=content>
 		<div class="list-content">
-	    	<h1>Programming</h1>
+	    	<h1>Projects</h1>
 	    	<div class="list-subcontent">
-				<p> MATLAB </p>
-				<p> Python </p>
-				<p> C </p>
-				<p> Latex </p>
-				<p> C# </p>
-				<p> C++ </p>
-				<p> HTML & CSS </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Microcontrollers</h1>
-	    	<div class="list-subcontent">
-				<p> Arduino </p>
-				<p> Raspberry Pi </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Software</h1>
-	    	<div class="list-subcontent">
-				<p> Audacity </p>
-				<p> Unity 3D </p>
-				<p> SOLIDWORKS </p>
-				<p> Pro Tools </p>
-				<p> Phtoshop </p>
-				<p> Illustrator </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Fabrication</h1>
-	    	<div class="list-subcontent">
-				<p> Laser Cutting </p>
-				<p> 3D Printing </p>
-			</div>
-		</div>
-		<div class="list-content">
-	    	<h1>Spoken Languages</h1>
-	    	<div class="list-subcontent">
-				<p> English (native)</p>
-				<p> Chinese (professional working proficiency)</p>
-				<p> Spanish (limited working proficiency)</p>
+				<h2>Toy Camera</h2>
+				<p class = description-end> February 2020</p>
+				<h2>Chiptune/8-Bit Effect</h2>
+				<p class = description-end>Fall 2019</p>
+				<h2>Language Identification System</h2>
+				<p class = description-end>Fall 2019</p>
+				<h2>Window Washing Robot</h2>
+				<p class = description-end>Spring 2019</p>
+				<h2>Dialog System</h2>
+				<p class = description-end>November 2018</p>
+				<h2>Embedded Real-Time Kernel</h2>
+				<p class = description-end>Spring 2018</p>
 			</div>
 		</div>
 	</div>    
