Updated Nav Bar and Projects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
-	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
+	    	<a href="index.html" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
 	    	<a href="projects.html" class="element underline-ltr"> 
@@ -34,6 +34,9 @@
 	    	<a href="experience.html" class="element underline-ltr"> 
 	    		Experience 
 	    	</a>
+            <div class="element underline-ltr" id="resume"> 
+                Resume 
+            </div>
 	    	<a href="contact.html" class="element underline-ltr"> 
 	    		Contact 
 	    	</a>
@@ -52,7 +55,7 @@
     </div>
 
     <div id='resume' class="resume">
-		Resume 
+		My Resume 
 	</div>
 
 	<div class=item>
