--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
-	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
+	    	<a href="index.html" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
 	    	<a href="projects.html" class="element underline-ltr"> 
@@ -32,6 +32,9 @@
 	    	<a href="experience.html" class="element underline-ltr"> 
 	    		Experience 
 	    	</a>
+	    	<div class="element underline-ltr" id="resume"> 
+	    		Resume 
+	    	</div>
 	    	<a href="contact.html" class="element underline-ltr"> 
 	    		Contact 
 	    	</a>
@@ -43,18 +46,36 @@
 		<div class="list-content">
 	    	<h1>Projects</h1>
 	    	<div class="list-subcontent">
-				<h2>Toy Camera</h2>
-				<p class = description-end> February 2020</p>
-				<h2>Chiptune/8-Bit Effect</h2>
-				<p class = description-end>Fall 2019</p>
-				<h2>Language Identification System</h2>
-				<p class = description-end>Fall 2019</p>
-				<h2>Window Washing Robot</h2>
-				<p class = description-end>Spring 2019</p>
-				<h2>Dialog System</h2>
-				<p class = description-end>November 2018</p>
-				<h2>Embedded Real-Time Kernel</h2>
-				<p class = description-end>Spring 2018</p>
+				<p class = "header draw-line draw-line-top-fade-up draw-line2 draw-line-bot-fade-up"> Toy Camera <br>
+					<span class = description-end>
+						February 2020 <br><br>
+						My group of 3 fabricated a toy camera for our Intro to Making course. We assembled a frame from laser cut and 3D printed pieces and used an Arduino, electronics, and LEDs to replicate a real camera's functions. I was in charge of programming the electronics and assembling the circuits.
+					</span></p>
+				<p class = "header"> Chiptune/8-Bit Effect <br>
+					<span class = description-end>
+						Fall 2019 <br><br>
+						Using Nyquist, a sound synthesis and composition language, I wrote a chiptune/8-bit effect library. Users can use the library to change audio into chiptune and mix the original and chiptune sounds.
+					</span></p>
+				<p class = "header"> Language Identification System <br>
+					<span class = description-end>
+						Fall 2019 <br><br>
+						For our Speech Recognition course project, I collaborated with two teammates to design a successful language identification system for English, German, and Mandarin Chinese speech. The system used phones for identifying the language. We developed the system and baseline comparisons using Python in Google Colab.
+					</span></p>
+				<p class = "header"> Window Washing Robot <br>
+					<span class = description-end>
+						Spring 2019 <br><br>
+						For my undergraduate capstone, my team of 5 developed an autonomous robot that adheres to and cleans windows. The robot automatically navigates over a window pane, crosses over a barrier, and cleans a 5' x 6' total area in under 3 minutes. I was in charge of assembling the electronic components and circuitry of the robot. I also helped to develop the control, locomotion, adhesion, sensing, and cleaning subsystems.
+					</span></p>
+				<p class = "header"> Dialog System <br>
+					<span class = description-end>
+						November 2018 <br><br>
+						One of the course projects for my Speech Processing class was to build a multi-turn pizza ordering system as an Alexa Skill for Amazon Echos. I created state diagrams and used ngrok and flask-ask to develop servers and dialog for the Alexa skill.
+					</span></p>
+				<p class = "header line-box"> Embedded Real-Time Kernel <br>
+					<span class = description-end>
+						Spring 2018 <br><br>
+						In the culminating course project for our Introduction to Embedded Systems course, my partner and I implemented a real-time Linux kernel module on a Raspberry Pi. We wrote device drivers using GPIO to interface with rotary encoders, DC motors, and PID speed controllers in order to control wheels on two Raspberry Pi’s via ethernet. We also adapted skills and code for UART, I2C, timers, interrupt handlers, and real-time scheduling from previous course projects to complete this cumulative project.
+					</span></p>
 			</div>
 		</div>
 	</div>    
