--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
-	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
+	    	<a href="index.html" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
 	    	<a href="projects.html" class="element underline-ltr"> 
@@ -32,6 +32,9 @@
 	    	<a href="experience.html" class="element underline-ltr"> 
 	    		Experience 
 	    	</a>
+	    	<div class="element underline-ltr" id="resume"> 
+	    		Resume 
+	    	</div>
 	    	<a href="contact.html" class="element underline-ltr"> 
 	    		Contact 
 	    	</a>
