Changed design for About Me page

--- a/index.html
+++ b/index.html
@@ -44,19 +44,25 @@
     </div>
 
 
-	<div class=content>
-		<div class=content_img>
-    		<img class=profile_image src="images/profile.jpg">
+	<div class=profile>
+		<div class="content_img">
+    		<img class=profile-img src="images/profile.jpg">
     	</div>
-    	<h1 class=header>Hello!</h1>
-		
-		<p> I'm Bridget. I am a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering. I recently graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="http://coursecatalog.web.cmu.edu/collegeofengineering/undergraduatedesignatedminors/#audioengineeringtext" target="_blank">audio engineering</a>. My coursework is primarily focused in signal and image processing. I'm currently building this website for a class, so more content will be added in the coming weeks.</p>
+        <div class=profile-txt>
+        	<h1 class=header style="font-size: 50px; font-weight: bold">Hello!</h1>
+    		
+    		<p style="margin-top: 50px;"> I'm Bridget. I am a student at Carnegie Mellon University pursuing my Master's degree in Electrical and Computer Engineering. I recently graduated from CMU with a Bachelor's degree in ECE and a minor in <a href="http://coursecatalog.web.cmu.edu/collegeofengineering/undergraduatedesignatedminors/#audioengineeringtext" target="_blank">audio engineering</a>. My coursework is primarily focused in signal and image processing. 
 
+            <br><br> I'm currently building this website for a class, so more content will be added in the coming weeks.
+
+            <br><br> For my <a href="documents/Bridget Tan Resume.pdf" target="_blank">resume</a>.
+            </p>
+        </div>
     </div>
 
-    <div id='resume' class="resume">
+    <!-- <div id='resume' class="resume">
 		My Resume 
-	</div>
+	</div> -->
 
 	<div class=item>
     	<h3 class=header-center>MS in Electrical and Computer Engineering</h3>		
