--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <script src="./Give Me a Title!_files/jquery.min.js.download"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-<body bgcolor="#1c1c1c">
+<body>
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
@@ -42,40 +42,58 @@
     </div>
 
 
-	<div class=content>
+	<div class=content>  <!-- style="width: 80%; margin-left: 10%"> -->
 		<div class="list-content">
 	    	<h1>Projects</h1>
-	    	<div class="list-subcontent">
-				<p class = "header draw-line draw-line-top-fade-up draw-line2 draw-line-bot-fade-up"> Toy Camera <br>
-					<span class = description-end>
-						February 2020 <br><br>
-						My group of 3 fabricated a toy camera for our Intro to Making course. We assembled a frame from laser cut and 3D printed pieces and used an Arduino, electronics, and LEDs to replicate a real camera's functions. I was in charge of programming the electronics and assembling the circuits.
-					</span></p>
-				<p class = "header"> Chiptune/8-Bit Effect <br>
-					<span class = description-end>
-						Fall 2019 <br><br>
-						Using Nyquist, a sound synthesis and composition language, I wrote a chiptune/8-bit effect library. Users can use the library to change audio into chiptune and mix the original and chiptune sounds.
-					</span></p>
-				<p class = "header"> Language Identification System <br>
-					<span class = description-end>
-						Fall 2019 <br><br>
-						For our Speech Recognition course project, I collaborated with two teammates to design a successful language identification system for English, German, and Mandarin Chinese speech. The system used phones for identifying the language. We developed the system and baseline comparisons using Python in Google Colab.
-					</span></p>
-				<p class = "header"> Window Washing Robot <br>
-					<span class = description-end>
-						Spring 2019 <br><br>
-						For my undergraduate capstone, my team of 5 developed an autonomous robot that adheres to and cleans windows. The robot automatically navigates over a window pane, crosses over a barrier, and cleans a 5' x 6' total area in under 3 minutes. I was in charge of assembling the electronic components and circuitry of the robot. I also helped to develop the control, locomotion, adhesion, sensing, and cleaning subsystems.
-					</span></p>
-				<p class = "header"> Dialog System <br>
-					<span class = description-end>
-						November 2018 <br><br>
-						One of the course projects for my Speech Processing class was to build a multi-turn pizza ordering system as an Alexa Skill for Amazon Echos. I created state diagrams and used ngrok and flask-ask to develop servers and dialog for the Alexa skill.
-					</span></p>
-				<p class = "header line-box"> Embedded Real-Time Kernel <br>
-					<span class = description-end>
-						Spring 2018 <br><br>
-						In the culminating course project for our Introduction to Embedded Systems course, my partner and I implemented a real-time Linux kernel module on a Raspberry Pi. We wrote device drivers using GPIO to interface with rotary encoders, DC motors, and PID speed controllers in order to control wheels on two Raspberry Pi’s via ethernet. We also adapted skills and code for UART, I2C, timers, interrupt handlers, and real-time scheduling from previous course projects to complete this cumulative project.
-					</span></p>
+	    	<div class="row">
+				<div class="column-left" style="background-color: black; width: 25%">
+					<div class="tab">
+						<button class="tablinks" onmouseover="openCity(event, 'pw')" onclick="openCity(event, 'pw')" id="defaultOpen">Personal Website</button>
+						<button class="tablinks" onmouseover="openCity(event, 'toy-camera')" onclick="openCity(event, 'toy-camera')">Toy Camera</button>
+						<button class="tablinks" onmouseover="openCity(event, 'chiptune')" onclick="openCity(event, 'chiptune')">Chiptune/8-Bit Effect</button>
+						<button class="tablinks" onmouseover="openCity(event, 'lang-ID')" onclick="openCity(event, 'lang-ID')">Language Identification System</button>
+						<button class="tablinks" onmouseover="openCity(event, 'window-robot')" onclick="openCity(event, 'window-robot')">Window Washing Robot</button>
+						<button class="tablinks" onmouseover="openCity(event, 'dialog-sys')" onclick="openCity(event, 'dialog-sys')">Dialog System</button>
+						<button class="tablinks" onmouseover="openCity(event, 'kernel')" onclick="openCity(event, 'kernel')">Embedded Real Time Kernel</button>
+					</div>
+			
+				</div>
+				<div class="column-right" style="width: 75%">
+					<div id="pw" class="tabcontent">
+						<h3>Spring 2020</h3>
+						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. </p> 
+					</div>
+
+					<div id="toy-camera" class="tabcontent">
+						<h3>February 2020</h3>
+						<p>My group of 3 fabricated a toy camera for our Intro to Making course. We assembled a frame from laser cut and 3D printed pieces and used an Arduino, electronics, and LEDs to replicate a real camera's functions. I was in charge of programming the electronics and assembling the circuits.</p>
+					</div>
+
+					<div id="chiptune" class="tabcontent">
+						<h3>Fall 2019</h3>
+						<p>Using Nyquist, a sound synthesis and composition language, I wrote a chiptune/8-bit effect library. Users can use the library to change audio into chiptune and mix the original and chiptune sounds.</p>
+					</div>	
+
+					<div id="lang-ID" class="tabcontent">
+						<h3>Fall 2019</h3>
+						<p>For our Speech Recognition course project, I collaborated with two teammates to design a successful language identification system for English, German, and Mandarin Chinese speech. The system used phones for identifying the language. We developed the system and baseline comparisons using Python in Google Colab.<br><br> For our <a href="https://drive.google.com/file/d/1qSzUatCmelS3LLjeaT6RmN-2aO2L_tPA/view?usp=sharing">project poster</a>.</p>
+					</div>	
+
+					<div id="window-robot" class="tabcontent">
+						<h3>Spring 2019</h3>
+						<p>For my undergraduate capstone, my team of 5 developed an autonomous robot that adheres to and cleans windows. The robot automatically navigates over a window pane, crosses over a barrier, and cleans a 5' x 6' total area in under 3 minutes. I was in charge of assembling the electronic components and circuitry of the robot. I also helped to develop the control, locomotion, adhesion, sensing, and cleaning subsystems.<br><br> More details about this project can be found on our <a href="https://sites.google.com/view/geickobot/home">capstone website</a>.</p>
+					</div>	
+
+					<div id="dialog-sys" class="tabcontent">
+						<h3>November 2018</h3>
+						<p>One of the course projects for my Speech Processing class was to build a multi-turn pizza ordering system as an Alexa Skill for Amazon Echos. I created state diagrams and used ngrok and flask-ask to develop servers and dialog for the Alexa skill.</p>
+					</div>	
+
+					<div id="kernel" class="tabcontent">
+						<h3>Spring 2018</h3>
+						<p>In the culminating course project for our Introduction to Embedded Systems course, my partner and I implemented a real-time Linux kernel module on a Raspberry Pi. We wrote device drivers using GPIO to interface with rotary encoders, DC motors, and PID speed controllers in order to control wheels on two Raspberry Pi’s via ethernet. We also adapted skills and code for UART, I2C, timers, interrupt handlers, and real-time scheduling from previous course projects to complete this cumulative project.</p>
+					</div>	
+				</div>
 			</div>
 		</div>
 	</div>    
