--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
-	    	<a href="index.html" class="element underline-ltr"> 
+	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
 	    	<a href="projects.html" class="element underline-ltr"> 
@@ -44,9 +44,9 @@
 
 
 	<div class="content margin-top-100">
-		<h1 class=header-center>Contact.</h1> 
+		<h1 class=center>Contact.</h1> 
 		<div class=margin-top-75>
-			<p class=header-center> You can contact me at any time. I look forward to connecting with you.</p>
+			<p class=center> You can contact me at any time. I look forward to connecting with you.</p>
 			<h4 class=box>bridgett [at] andrew [dot] cmu [dot] edu</h4>
 		</div>
 	</div>    
