Updated content and designs

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
-	    	<a href="index.html" class="element underline-ltr"> 
+	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
 	    	<a href="projects.html" class="element underline-ltr"> 
@@ -44,7 +44,8 @@
 
 	<div class=content>  <!-- style="width: 80%; margin-left: 10%"> -->
 		<div class="list-content">
-	    	<h1>Projects</h1>
+	    	<h1 class="center">Projects</h1>
+	    	<div style="height: 30px"></div>
 	    	<div class="row">
 				<div class="column-left" style="background-color: black; width: 25%">
 					<div class="tab">
@@ -54,14 +55,16 @@
 						<button class="tablinks" onclick="openCity(event, 'lang-ID')">Language Identification System</button>
 						<button class="tablinks" onclick="openCity(event, 'window-robot')">Window Washing Robot</button>
 						<button class="tablinks" onclick="openCity(event, 'dialog-sys')">Dialog System</button>
+						<button class="tablinks" onclick="openCity(event, 'exergame')">Exergame For Preschool Children</button>
 						<button class="tablinks" onclick="openCity(event, 'kernel')">Embedded Real Time Kernel</button>
+						<button class="tablinks" onclick="openCity(event, 'platformer')">Custom Platformer Game</button>
 					</div>
 			
 				</div>
 				<div class="column-right" style="width: 75%">
 					<div id="pw" class="tabcontent">
-						<h3>Spring 2020</h3>
-						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. I will continue to use those skills to update this website.</p> 
+						<h3>January 2020 - Present</h3>
+						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. I will continue to use those skills to update this website.<br><br>Please reach out to me if you have any feedback on my website or tips on website development. I'm eager to learn more!</p> 
 					</div>
 
 					<div id="toy-camera" class="tabcontent">
@@ -71,16 +74,16 @@
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
 								<div class="numbertext">1 / 2</div>
-								<img src="images/toy-camera1.jpg" style="max-height: 250px; max-width: 100%">
+								<img src="images/toy-camera1.jpg" style="max-height: 300px; max-width: 100%">
 								<div class="text">Toy camera front</div>
 							</div>
 
 							<div class="mySlides fade">
 								<div class="numbertext">2 / 2</div>
-								<img src="images/toy-camera2.jpg" style="max-height: 250px; max-width: 100%">
+								<img src="images/toy-camera2.jpg" style="max-height: 300px; max-width: 100%">
 								<div class="text">Toy camera back</div>
 							</div>
-							
+
 							<a class="prev" onclick="plusDivs(this, -1)">&#10094;</a>
   							<a class="next" onclick="plusDivs(this, 1)">&#10095;</a>
 						</div>
@@ -113,13 +116,13 @@
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
 								<div class="numbertext">1 / 2</div>
-								<img src="images/window-washing-robot.jpg" style="max-height: 250px; max-width: 100%">
+								<img src="images/window-washing-robot.jpg" style="max-height: 300px; max-width: 100%">
 								<div class="text">Window Washing Robot</div>
 							</div>
 
 							<div class="mySlides fade">
 								<div class="numbertext">2 / 2</div>
-								<img src="images/robot-demo-img.png" style="max-height: 250px; max-width: 100%">
+								<img src="images/robot-demo-img.png" style="max-height: 300px; max-width: 100%">
 								<div class="text">Image from our final demo</div>
 							</div>
 
@@ -141,16 +144,28 @@
 					<div id="dialog-sys" class="tabcontent">
 						<h3>November 2018</h3>
 						<p>One of the course projects for my Speech Processing class was to build a multi-turn pizza ordering system as an Alexa Skill for Amazon Echos. I created state diagrams and used ngrok and flask-ask to develop servers and dialog for the Alexa skill.</p>
+					</div>
+
+					<div id="exergame" class="tabcontent">
+						<h3>May 2017 - September 2018</h3>
+						<p>I worked on a team of six to design and program video games promoting cognitive engagement and physical activity, which enhanced cognitive control and school readiness skills in prekindergarten children</p>
 					</div>	
 
 					<div id="kernel" class="tabcontent">
 						<h3>Spring 2018</h3>
 						<p>In the culminating course project for our Introduction to Embedded Systems course, my partner and I implemented a real-time Linux kernel module on a Raspberry Pi. We wrote device drivers using GPIO to interface with rotary encoders, DC motors, and PID speed controllers in order to control wheels on two Raspberry Pi’s via ethernet. We also adapted skills and code for UART, I2C, timers, interrupt handlers, and real-time scheduling from previous course projects to complete this cumulative project.</p>
 					</div>	
+
+					<div id="platformer" class="tabcontent">
+						<h3>Fall 2015</h3>
+						<p>For the final term project in the class Fundamentals of Programming, I designed and developed a game using Python and Pygame. The game includes a sidescrolling stage, menus, and mouse and keyboard controls. Puzzles are solved by drawing specific shapes with the mouse to interact with objects in the environment.</p>
+					</div>	
 				</div>
 			</div>
 		</div>
 	</div>    
+
+	<div style="padding-bottom: 15px"></div>
 
     <div class="nav-bottom">
     	<div class="element">
