--- a/skills.html
+++ b/skills.html
@@ -20,7 +20,7 @@
     <div class="nav-bar">
     	<div class="title"> Bridget Tan </div>
     	<div class="nav-right">
-	    	<a href="index.html" class="element underline-ltr"> 
+	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		About Me
 	    	</a>
 	    	<a href="projects.html" class="element underline-ltr"> 
@@ -43,50 +43,106 @@
 
 
 	<div class=content>
-		<div class="list-content">
-	    	<h1>Programming</h1>
-	    	<div class="list-subcontent">
-				<p> MATLAB </p>
-				<p> Python </p>
-				<p> C </p>
-				<p> Latex </p>
-				<p> C# </p>
-				<p> C++ </p>
-				<p> HTML & CSS </p>
-			</div>
+		<h1 class=center>Skills</h1> 
+    	<div class="list-subcontent center margin-top-40">
+    		<p>Digital Signal Processing • Image Processing • Software Engineering • Audio Engineering • Embedded Programming • Maker</p>
+			<p>Below is a list of the programming languages, software, and hardware that I use and their purposes. Other skills that I have are also included.</p>
+			<div class="margin-top-100"></div>
 		</div>
-		<div class="list-content">
-	    	<h1>Microcontrollers</h1>
-	    	<div class="list-subcontent">
-				<p> Arduino </p>
-				<p> Raspberry Pi </p>
-			</div>
+
+    	<h1 class="center font-lighter">Programming</h1>
+    	<div id="line-grey"></div>
+    	<div class="list-subcontent">
+			<p id="side-text"> MATLAB </p>
+			<p id="small-side-text">Signal Processing • Image Processing</p>
 		</div>
-		<div class="list-content">
-	    	<h1>Software</h1>
-	    	<div class="list-subcontent">
-				<p> Audacity </p>
-				<p> Unity 3D </p>
-				<p> SOLIDWORKS </p>
-				<p> Pro Tools </p>
-				<p> Phtoshop </p>
-				<p> Illustrator </p>
-			</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Python </p>
+			<p id="small-side-text">Computer Vision • NumPy • PyGame</p>
 		</div>
-		<div class="list-content">
-	    	<h1>Fabrication</h1>
-	    	<div class="list-subcontent">
-				<p> Laser Cutting </p>
-				<p> 3D Printing </p>
-			</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> C </p>
+			<p id="small-side-text">Embedded Programming • Data Structures</p>
 		</div>
-		<div class="list-content">
-	    	<h1>Spoken Languages</h1>
-	    	<div class="list-subcontent">
-				<p> English (native)</p>
-				<p> Chinese (professional working proficiency)</p>
-				<p> Spanish (limited working proficiency)</p>
-			</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Latex </p>
+			<p id="small-side-text">Making documents</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> C# </p>
+			<p id="small-side-text">Unity Scripting</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> C++ </p>
+			<p id="small-side-text">Arduino Programming</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> HTML & CSS </p>
+			<p id="small-side-text">Writing Websites</p>
+		</div>
+
+    	<h1 class="center margin-top-40 font-lighter">Microcontrollers</h1>
+    	<div id="line-grey"></div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Arduino </p>
+			<p id="small-side-text">Maker Projects</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Raspberry Pi </p>
+			<p id="small-side-text">Robots • Embedded Programming</p>
+		</div>
+
+    	<h1 class="center margin-top-40 font-lighter">Software</h1>
+    	<div id="line-grey"></div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Audacity </p>
+			<p id="small-side-text">Music Editing</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Unity 3D </p>
+			<p id="small-side-text">Game Development</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> SOLIDWORKS </p>
+			<p id="small-side-text">CAD Modeling</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Pro Tools </p>
+			<p id="small-side-text">Sound Recording, Editing & Mastering</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Photoshop </p>
+			<p id="small-side-text">Photo Editing</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Procreate </p>
+			<p id="small-side-text">Sketches</p>
+		</div>
+    	
+    	<h1 class="center margin-top-40 font-lighter">Fabrication</h1>
+    	<div id="line-grey"></div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Laser Cutting </p>
+			<p id="small-side-text">Maker Projects</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> 3D Printing </p>
+			<p id="small-side-text">Maker Projects</p>
+		</div>
+
+    	<h1 class="center margin-top-40 font-lighter">Spoken Languages</h1>
+    	<div id="line-grey"></div>
+    	<div class="list-subcontent">
+			<p id="side-text"> English</p>
+			<p id="small-side-text">Native speaker</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Chinese</p>
+			<p id="small-side-text">Professional working proficiency</p>
+		</div>
+    	<div class="list-subcontent">
+			<p id="side-text"> Spanish</p>
+			<p id="small-side-text">Limited working proficiency</p>
 		</div>
 	</div>    
 
