Updated nav bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="#1c1c1c">
     <div class="nav-bar">
-    	<div class="title"> Bridget Tan </div>
+        <div class="title" id="title"> Bridget Tan </div>
     	<div class="nav-right">
 	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		About Me
