--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="nav-bar">
-    	<div class="title"> Bridget Tan </div>
+    	<div class="title" id="title"> Bridget Tan </div>
     	<div class="nav-right">
 	    	<a href="https://bridget-tan.github.io/personal-website/" class="element underline-ltr"> 
 	    		About Me
@@ -64,7 +64,7 @@
 				<div class="column-right" style="width: 75%">
 					<div id="pw" class="tabcontent">
 						<h3>January 2020 - Present</h3>
-						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. I will continue to use those skills to update this website.<br><br>Please reach out to me if you have any feedback on my website or tips on website development. I'm eager to learn more!</p> 
+						<p>I made this personal website for <a href="https://cardadfar.github.io/stuco_webdev_website/index.html">StuCo: Building Personal Websites</a>, a student-taught course. Through this class, I learned the basics of website design, HTML, CSS, JavaScript, and jQuery. I will continue to use those skills to update this website.<br><br>A lot of the code on this website was developed based on the class and <a href="https://www.w3schools.com">w3schools.com</a> or adapted from other websites. Please reach out to me if you have any feedback on my website or tips on website development. I'm eager to learn more!</p> 
 					</div>
 
 					<div id="toy-camera" class="tabcontent">
