Added experience skills

--- a/experience.html
+++ b/experience.html
@@ -63,8 +63,7 @@
 			<p id="small-side-text">Carnegie Mellon University - May 2019</p>
 		</div>
 
-<!-- indent -->
-<div class="content margin-top-40" style="color: black">
+	<div class="content margin-top-40" style="color: black">
         <div class="list-content">
             <div class="row">
                 <div class="column-left" style="width: 20%">
@@ -452,26 +451,54 @@
 			<p id="side-text"> Assistant Course Developer </p>
 			<p id="small-side-text">Open Learning Initiative, Carnegie Mellon University</p>
 			<p id="small-side-text">March 2020 - Present, June 2019 - December 2019</p>
+			<div class="expskills">
+				<p id="rcorners1">Excel</p>
+				<p id="rcorners1">QA</p>
+			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text">Student Technician</p>
 			<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
 			<p id="small-side-text">October 2015 - Present</p>
+			<div class="expskills">
+				<p id="rcorners1">Audio Engineering</p>
+				<p id="rcorners1">Rigging</p>
+				<p id="rcorners1">Event Planning</p>
+				<p id="rcorners1">Teamwork</p>
+			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Orientation 2020 Production Manager </p>
 			<p id="small-side-text">AB Tech, Carnegie Mellon University</p>
 			<p id="small-side-text">May 2019 - August 2019</p>
+			<div class="expskills">
+				<p id="rcorners1">Leadership</p>
+				<p id="rcorners1">Project Management</p>
+			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Research Programmer </p>
 			<p id="small-side-text">Infant Language and Learning Lab, Carnegie Mellon University</p>
 			<p id="small-side-text">May 2019 - July 2019</p>
+			<div class="expskills">
+				<p id="rcorners1">MATLAB</p>
+				<p id="rcorners1">Data Analysis</p>
+				<p id="rcorners1">Research</p>
+			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Research Assistant </p>
 			<p id="small-side-text">Infant Language and Learning Lab, Carnegie Mellon University</p>
 			<p id="small-side-text">May 2017 - September 2018</p>
+			<div class="expskills">
+				<p id="rcorners1">Unity</p>
+				<p id="rcorners1">C#</p>
+				<p id="rcorners1">Python</p>
+				<p id="rcorners1">MATLAB</p>
+				<p id="rcorners1">Research</p>
+				<p id="rcorners1">Game Development</p>
+				<p id="rcorners1">Teamwork</p>
+			</div>
 		</div>
 
 		<h1 class="center font-lighter margin-top-40">Leadership</h1>
@@ -480,27 +507,57 @@
 			<p id="side-text"> AB Tech </p>
 			<p id="small-side-text">PR/Social Media Chair</p>
 			<p id="small-side-text">May 2020 - Present</p>
+			<div class="expskills">
+				<p id="rcorners1">Social Media</p>
+				<p id="rcorners1">Digital Marketing</p>
+			</div>
 			<p></p>
 			<p id="small-side-text">Co-Head of Tech</p>
 			<p id="small-side-text">May 2019 - May 2020</p>
+			<div class="expskills">
+				<p id="rcorners1">Leadership</p>
+				<p id="rcorners1">Management</p>
+				<p id="rcorners1">Mentoring</p>
+			</div>
 			<p></p>
 			<p id="small-side-text">Executive Board Member</p>
 			<p id="small-side-text">May 2017 - May 2019</p>
+			<div class="expskills">
+				<p id="rcorners1">Leadership</p>
+				<p id="rcorners1">Management</p>
+				<p id="rcorners1">Mentoring</p>
+			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Awareness of Roots in Chinese Culture (ARCC) </p>
 			<p id="small-side-text">PR Chair</p>
 			<p id="small-side-text">September 2018 - May 2019</p>
+			<div class="expskills">
+				<p id="rcorners1">Social Media</p>
+				<p id="rcorners1">Digital Marketing</p>
+				<p id="rcorners1">Event Planning</p>
+			</div>
 			<p></p>
 			<p id="small-side-text">Secretary</p>
 			<p id="small-side-text">September 2017 - May 2018</p>
+			<div class="expskills">
+				<p id="rcorners1">Communication</p>
+				<p id="rcorners1">Event Planning</p>
+			</div>
 			<p></p>
 			<p id="small-side-text">Historian</p>
 			<p id="small-side-text">September 2016 - May 2017</p>
+			<div class="expskills">
+				<p id="rcorners1">Photography</p>
+				<p id="rcorners1">Event Planning</p>
+			</div>
 		</div>
     	<div class="list-subcontent">
 			<p id="side-text"> Lion Dance Choreographer </p>
 			<p id="small-side-text">Spring 2017 and 2018</p>
+			<div class="expskills">
+				<p id="rcorners1">Teaching</p>
+			</div>
 		</div>
 
 	</div>    
