--- a/skills.html
+++ b/skills.html
@@ -99,7 +99,7 @@
 			<p id="small-side-text">Music Editing</p>
 		</div>
     	<div class="list-subcontent">
-			<p id="side-text"> Unity 3D </p>
+			<p id="side-text"> Unity </p>
 			<p id="small-side-text">Game Development</p>
 		</div>
     	<div class="list-subcontent">
